# epaper-watch-fw

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  getIncludeList.sh
.cache/clangd/index/: bmp.h.C8672624477A454B.idx  cmsis_compiler.h.37751380D4B2032F.idx  cmsis_compiler.h.46C8F4A4FC56D45F.idx  cmsis_gcc.h.04D31864AACFEEC3.idx  cmsis_gcc.h.62A88E3A07A5F1BA.idx  cmsis_version.h.0C6F013A6CFB8689.idx  cmsis_version.h.31746544E4D3D26B.idx  core_cm4.h.16F794BDCE56D349.idx  core_cm4.h.A279EB6CC82120D9.idx  delay.c.B7BAF09FD7881B24.idx  delay.h.1F158B4E6A70AB88.idx  driver_ssd1681_font.h.9BD350D70A1DF5D1.idx  driver_ssd1681_interface.h.E38F7A2556F4B6BE.idx  epd_user_cfg.h.6843403C3D9DAB17.idx  epd_user_cfg.h.9D8C769648719339.idx  epdfont.h.A93EC28C2655EC81.idx  gpio.c.0B2EFF66838650F9.idx  gpio.h.5E2D7F001DF862E1.idx  it.c.7130E8AEA197C4D2.idx  main.c.56FF86F4002FB056.idx  main.c.BA9573F224F43E8C.idx  main.h.A47AE89549B50D76.idx  mpu_armv7.h.1B0C39C313734085.idx  mpu_armv7.h.E24E5DD1A3012CF9.idx  spi.c.802695493CACDE47.idx  spi.c.C15376B5DF32AA34.idx  spi.h.CC8948AA2C75CB73.idx  spi.h.E5DE5042CE30E441.idx  ssd1681.c.12A982E820F1DE56.idx  ssd1681.c.D43672F81F75EA52.idx  ssd1681.h.2F302F7A29F738EA.idx  ssd1681.h.5B893F54644C364C.idx  ssd1681_interface.h.AD650515350BE358.idx  ssd1681_interface.h.D5FAA01D56BC2523.idx  stm32_hal_legacy.h.68B51E04A02F95FB.idx  stm32_hal_legacy.h.C7811C26539CAA5E.idx  stm32wb55xx.h.3C4F361B3002EC90.idx  (+173 more)
.devcontainer/: Dockerfile  devcontainer.json
Core/inc/: main.h
Core/src/: backup.c  it.c  limpo.c  main.c
Drivers/: stm32wb55xx_flash_cm4.ld
app/display/: app_display.c  app_display.h  display_hal.c  display_hal.h
app/oximeter/: app_oximeter.c  app_oximeter.h  oximeter_hal.c  oximeter_hal.h
app/system/: app_system.c  app_system.h
cmake/: IncludeList.cmake  STM32WB55XX_HAL_PARA.cmake  SourceList.cmake  gcc-arm-none-eabi.cmake
cmake/scripts/: getSourceList.sh
core/inc/: stm32wbxx_hal_conf.h
core/src/: backup.c  it.c  main.c  startup_stm32wb55xx_cm4.s  stm32wb55xx_flash_cm4.ld
core_temp/inc/: it.h
core_temp/src/: msp.c
(+59 files in other folders)
